delete deliverable folders